2007-03-22  David Harrison  <harrison@apple.com>

        Reviewed by Geoff, Darin.

        <rdar://problem/5077892> In RapidWeaver 3.5.1, a crash occurs when attempting to load Safari Bookmarks in iMedia Browser
        
        * platform/mac/ThreadCheck.mm:
        (WebCore::_WebCoreThreadViolationCheck):
        Change default on Tiger to NSLog rather than raise an exception.

2007-03-22  Darin Adler  <darin@apple.com>

        Reviewed by Brady.

        - use binary_search instead of hash table; slightly better performance and
          less memory use

        * platform/network/ResourceHandle.cpp: (WebCore::ResourceHandle::portAllowed):
        Use binary_search.

2007-03-22  Darin Adler  <darin@apple.com>

        Reviewed by Adele.

        - fix <rdar://problem/5074630> detachChildren call should move from WebKit to WebCore

        * loader/FrameLoader.cpp: (WebCore::FrameLoader::setDocumentLoader):
        Add a call to detachChildren() after the call to prepareForDataSourceReplacement().
        There was no reason for this crucial loading step to be left to the client.

2007-03-22  David Hyatt  <hyatt@apple.com>

        Minor refactoring and cleanup of the bridge calls that want to control layout settings on the RenderView.
        Have the bridge talk through the FrameView instead of just asking for the RenderView directly.

        Add an assert to help catch situations where the RenderView needs layout at paint time, since this is a known
        catastrophic scenario that will (much of the time) result in a crash in RenderTableSection::paint.

        Reviewed by aroben

        * page/FrameView.cpp:
        (WebCore::FrameView::adjustViewSize):
        (WebCore::FrameView::needsLayout):
        (WebCore::FrameView::setNeedsLayout):
        * page/FrameView.h:
        * page/mac/WebCoreFrameBridge.mm:
        (-[WebCoreFrameBridge needsLayout]):
        (-[WebCoreFrameBridge setNeedsLayout]):
        * rendering/RenderView.cpp: