@@ -80,7 +80,6 @@ public:
     size_t frameCount() const;
     
     NativeImagePtr createFrameAtIndex(size_t);
-    void destroyFrameAtIndex(size_t);
     
     float frameDurationAtIndex(size_t);
     bool frameHasAlphaAtIndex(size_t); // Whether or not the frame actually used any alpha.
