@@ -1,3 +1,13 @@
+2007-03-22  David Hyatt  <hyatt@apple.com>
+
+        Remove unnecessary destroyFrameAtIndex call.  Now that we throw away
+        the image source, it is no longer needed.
+
+        Reviewed by beth
+
+        * platform/graphics/BitmapImage.cpp:
+        (WebCore::BitmapImage::destroyDecodedData):
+
 2007-03-22  David Harrison  <harrison@apple.com>
 
         Reviewed by Geoff, Darin.
